--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Ganji</title>
     <link rel="stylesheet" type="text/css" href="./Genji dawn of samurai.css">
 </head>
+<style>
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: 0;
+    }
+
+    body{
+        width: 100vw;
+        height: 100vh;
+        background-color: greenyellow;
+        background-size: 100%;
+    }
+</style>
 <body>
     <header>
         <div class="container">
@@ -15,7 +29,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">sobre o jogo</a>
+                    <a href="#"> sobre o jogo</a>
                 </li>
                 <li>
                     <a href="#">interaja no nossos grupos</a>
@@ -35,8 +49,8 @@
 A jogabilidade de “Genji” é descomplicada, ele é o típico “hack’n’slash”. Além de andar, podemos saltar, examinar/interagir e usar dois tipos de ataque, um fraco e outro forte. Na configuração de controles padrão (“Type A” no menu) o ataque fraco é usado com o “quadrado” e o forte com o “triângulo”, sendo que a “bola” serve para examinar/interagir e o “xis” salta. Além disso temos o bloqueio, que é acionado com o botão “R1”. Os direcionais analógicos servem para usar itens obtidos nos cenários (através do menu podemos associar cada item à um botão direcional, o que permite seu uso rápido durante as batalhas). (Via The Keyhole of my Mind)</p>
             </div>
     </section>
-    <section>
-        <div class="container">
+    <section id="contact">
+        <div class="rap">
             <h2>
                 interaja no nossos grupos
             </h2>
@@ -52,7 +66,19 @@ A jogabilidade de “Genji” é descomplicada, ele é o típico “hack’n’s
                     </a>
                 </li>
             </ul>
-        </div>
+            <div>
+                <h2>
+                me corrige-me
+            </h2>
+                <form>
+                    <input type="text" placeholder="seu nome"/>
+                    <input type="email" placeholder="seu email"/>
+                    <input type="tel" placeholder="seu telefone (opcional)"/>
+                    <textarea placeholder="sua mensagem"></textarea>
+                    <button type="submit">Enviar</button>
+                </form>
+            </div>    
+        </div>        
     </section>
 </body>
 </html>
